<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-143dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/purple_200">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/track"
            android:textSize="30sp"
            android:textColor="@color/purple_700"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motivation"
           android:textSize="30sp"
            android:textColor="@color/purple_700"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:textSize="20sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/time"/>

            <TextView
                android:textSize="20sp"
                android:id="@+id/route"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/route" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/pace"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/pace" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weather"
                android:textSize="20sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/weather"/>

            <TextView
                android:textSize="20sp"
                android:id="@+id/mood"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/mood" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/calories"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/calories" />
        </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/design_default_color_on_primary"
                app:itemIconTint="@drawable/selector"
                app:itemTextColor="@drawable/selector"
                app:menu="@menu/bottom_navigation_menu" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>